# microsoft-pst-sdk

./: .gitignore  CMakeLists.txt  Makefile  README.md  annotated.html  annotated_dup.js  btree_8h.html  btree_8h__dep__incl.dot  btree_8h__dep__incl.map  btree_8h__dep__incl.md5  btree_8h__incl.dot  btree_8h__incl.map  btree_8h__incl.md5  btree_8h_source.html  classbbt__leaf__entry_3_01_t_01_4.html  classbbt__leaf__entry_3_01_t_01_4__coll__graph.dot  classbbt__leaf__entry_3_01_t_01_4__coll__graph.map  classbbt__leaf__entry_3_01_t_01_4__coll__graph.md5  classbt__entry_3_01_t_01_4.html  classbt__entry_3_01_t_01_4__coll__graph.dot  classbt__entry_3_01_t_01_4__coll__graph.map  classbt__entry_3_01_t_01_4__coll__graph.md5  classbth__leaf__entry_3_01_k_00_01_v_01_4.html  classbth__leaf__entry_3_01_k_00_01_v_01_4__coll__graph.dot  classbth__leaf__entry_3_01_k_00_01_v_01_4__coll__graph.map  classbth__leaf__entry_3_01_k_00_01_v_01_4__coll__graph.md5  classbth__nonleaf__entry_3_01_k_01_4.html  classbth__nonleaf__entry_3_01_k_01_4__coll__graph.dot  classbth__nonleaf__entry_3_01_k_01_4__coll__graph.map  classbth__nonleaf__entry_3_01_k_01_4__coll__graph.md5  classes.html  classnbt__leaf__entry_3_01_t_01_4.html  classnbt__leaf__entry_3_01_t_01_4__coll__graph.dot  classnbt__leaf__entry_3_01_t_01_4__coll__graph.map  classnbt__leaf__entry_3_01_t_01_4__coll__graph.md5  classpage__trailer_3_01_t_01_4.html  classpage__trailer_3_01_t_01_4__coll__graph.dot  classpage__trailer_3_01_t_01_4__coll__graph.map  classpage__trailer_3_01_t_01_4__coll__graph.md5  classpstsdk_1_1attachment-members.html  (+1638 more)
.github/workflows/: ci.yml  doxygen.yml
doc/: Compiler Support.md  Documentation.md  Home.md  Project Status.md  big_issues.md  cross_platform_issues.md  disk.md  documentation_issues.md  ltp.md  ndb.md  ndb_read_issues.md  ndb_write_issues.md  pst.md  pst_read_issues.md  quick_start_devs.md  quick_start_users.md  test_issues.md  util.md  util_read_issues.md
pstsdk/: mapitags.h
pstsdk/ltp/: heap.h  (+4 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+119 more)
test/: CMakeLists.txt  databasetest.cpp  disktest.cpp  highlevel.cpp  main.cpp  pstlevel.cpp  utiltest.cpp
(+12 files in other folders)
